<resources>
    <string name="app_name">硅纳智慧</string>
    <string name="press2finsh">再按一次退出程序</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="success">成功</string>
    <string name="login_user_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="me_read_and_accept">我已经阅读并同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="please_input_confirm_password">请再次输入密码</string>
    <string name="next_step">下一步</string>
    <string name="home">首页</string>
    <string name="devices_manage">设备管理</string>
    <string name="check_result">检测结果</string>
    <string name="album">相册</string>
    <string name="user_center">个人中心</string>
    <string name="scan_scan">扫一扫</string>
    <string name="local_server">本地服务器</string>
    <string name="qc_check_terminal">QC检测终端</string>
    <string name="no_query_local_server">未查询到本地服务器</string>
    <string name="no_query_qc_check_terminal">未检测到QC检测终端</string>
    <string name="local_server_manage">本地服务器管理</string>
    <string name="model">模型</string>
    <string name="setting">设置</string>
    <string name="current_model_version">当前模型版本</string>
    <string name="new_model_version">最新模型版本</string>
    <string name="opreate">操作</string>
    <string name="updata">更新</string>
    <string name="seq">序号</string>
    <string name="model_name">模型名称</string>
    <string name="version">版本</string>
    <string name="choose_download">选择下载</string>
    <string name="technology_classify">工艺分类</string>
    <string name="technology_classify_">工艺分类:</string>
    <string name="check_part">检测部位</string>
    <string name="check_object">检测对象</string>
    <string name="download">下载</string>
    <string name="local_model_download">本地模型下载</string>
    <string name="project_count">项目数</string>
    <string name="technology_type">工艺类型</string>
    <string name="all_check_count">共计检测</string>
    <string name="project">项目</string>
    <string name="good_product_count">良品数</string>
    <string name="bad_product_count">不良品数</string>
    <string name="project_name">项目名称</string>
    <string name="name">名称</string>
    <string name="defective_rate">不良率</string>
    <string name="all">共计</string>
    <string name="project_check_manage">项目检测管理</string>
    <string name="time">时间</string>
    <string name="photo">图片</string>
    <string name="new_version">最新版本</string>
    <string name="configure_manage">配置管理</string>
    <string name="terminal_seq">终端编号:</string>
    <string name="connect_local_server_seq">连接本地服务器编号:</string>
    <string name="current_use_configure_version">当前使用配置版本:</string>
    <string name="switch_target_configure_version">切换目标配置版本:</string>
    <string name="check_project">检测项目</string>
    <string name="check_type">检测类型</string>
    <string name="configure_version">配置版本</string>
    <string name="terminal_switch_configure">终端切换配置</string>
    <string name="switchs">切换</string>
    <string name="details">详情</string>
    <string name="config_name">配置名称:</string>
    <string name="create_time">创建时间:</string>
    <string name="version_">版本:</string>
    <string name="config_detail">配置详情</string>
    <string name="use">应用</string>
    <string name="synchronization">同步</string>
    <string name="device_seq">设备编号:</string>
    <string name="use_config_">使用配置:</string>
    <string name="current_count_">当日产量:</string>
    <string name="current_day_check_count_">当日检测布匹匹数:</string>
    <string name="current_day_check_meter_">当日检测布匹米数:</string>
    <string name="all_count_">总产量:</string>
    <string name="current_bad_count_">当日不良数量:</string>
    <string name="all_bad_count_">总计不良数量:</string>
    <string name="config_list">配置列表</string>
    <string name="device_info">设备信息</string>
    <string name="server_seq">服务器编号:</string>
    <string name="connect_terminal_count">连接终端数量:</string>
    <string name="model_list">模型列表</string>
    <string name="cureent_version">当前版本</string>
    <string name="model_name_">模型名称:</string>
    <string name="current_version_">当前版本:</string>
    <string name="model_detail">模型详情</string>
    <string name="device_list">设备列表</string>
    <string name="terminal_count">终端数量</string>
    <string name="server_count">服务器数量</string>
    <string name="check_result_detail">检测结果详情</string>
    <string name="part">部位</string>
    <string name="address_parms">位置参数</string>
    <string name="please_input">请输入</string>
    <string name="negative">负公差:</string>
    <string name="puls">正公差:</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_choose_company">请选择公司</string>
    <string name="register_user">注册账号</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="user_name_no_empty">账号不能为空</string>
    <string name="password_no_empty">密码不能为空</string>
    <string name="two_password_input_diffent">两次输入的密码不一致</string>
    <string name="nickname_no_empty">用户昵称不能为空</string>
    <string name="phone_no_empty">手机号不能为空</string>
    <string name="user_manage">账号管理</string>
    <string name="son_user_manage">子账号管理</string>
    <string name="phone">手机号码</string>
    <string name="phone_">手机号码:</string>
    <string name="back">返回</string>
    <string name="company_name">公司名称</string>
    <string name="count_detail">生产详情</string>
    <string name="about_manufacturer">关于厂商</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="user">账号</string>
    <string name="password_no_right">密码不正确</string>
    <string name="logout">退出登陆</string>
    <string name="confirm_logout">确定退出登陆?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="logout_success">退出成功</string>
    <string name="name_">姓名:</string>
    <string name="user_name_">用户名:</string>
    <string name="company_list">公司列表</string>
    <string name="company_name_">公司名称:</string>
    <string name="company_address">公司地址:</string>
    <string name="sale_status">销售状况</string>
    <string name="company_status">公司状况</string>
    <string name="project_check_preview">项目检测结果数据表</string>
    <string name="device_check_result_preview">设备检测结果数据表</string>
    <string name="updata_password">修改密码</string>
    <string name="origin_password">原始密码</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="new_password">新密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="please_again_input_new_password">请再次输入新密码</string>
    <string name="updata_password_success">修改密码成功,请重新登陆</string>
    <string name="nickname">昵称</string>
    <string name="nickname_not_be_empty">昵称不能为空</string>
    <string name="phone_not_be_empty">手机号不能为空</string>
    <string name="updata_success">修改成功</string>
    <string name="cloth_list">布匹列表</string>
    <string name="cloth_number_">布匹号:</string>
    <string name="pot_number_">缸号:</string>
    <string name="length_">米数:</string>
    <string name="bad_count_">不良数量:</string>
    <string name="operate_user_">操作人:</string>
    <string name="check_part_list">零件不良位置数据表</string>
    <string name="bad_cloth_detail">不良布匹详情</string>
    <string name="bcloth_detail">布匹详情</string>
    <string name="title_number_">款号:</string>
    <string name="model_">型号:</string>
    <string name="bad_product_list">不良品列表</string>
    <string name="smart_qc_manage_app">智能QC管理应用版本</string>
    <string name="date">日期:</string>
    <string name="date_">日历</string>
    <string name="opation">选项</string>
    <string name="please_choose_query_opation">请选择搜索选项</string>
    <string name="please_input_word">请输入搜索关键字</string>
    <string name="online">在线状态:</string>
    <string name="no_online">不在线状态:</string>
    <string name="is_last_page">已是最后一页</string>
    <string name="is_first_page">当前第一页</string>
    <string name="device_count">设备数量</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="please_choose">请选择</string>
    <string name="hint_date">提示:开始日期和结束日期选择同一天就相当于查询那一天</string>
    <string name="color_">颜色:</string>
    <string name="entrusted_unit_">委托单位:</string>
    <string name="empty_data">暂无数据</string>
    <string name="request_timeout">请求超时</string>
    <string name="cloth_grade_">布匹分数:</string>
    <string name="check_date_">检测日期:</string>
    <string name="width_fu">宽幅:</string>
    <string name="door_fu">门幅:</string>

    <string name="material_calendar_monday">一</string>
    <string name="material_calendar_tuesday">二</string>
    <string name="material_calendar_wednesday">三</string>
    <string name="material_calendar_thursday">四</string>
    <string name="material_calendar_friday">五</string>
    <string name="material_calendar_saturday">六</string>
    <string name="material_calendar_sunday">日</string>

    <array name="material_calendar_months_array">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </array>

    <string name="material_calendar_today_button"></string>
    <string name="material_calendar_positive_button">确定</string>
    <string name="material_calendar_negative_button">取消</string>

    <string name="after_tall">以后再说</string>
    <string name="immediately_upgrade">立即更新</string>
    <string name="weight_">重量:</string>
    <string name="is_update_to">是否更新到</string>
    <string name="cancle">取消</string>
    <string name="keep">继续</string>
    <string name="stop">暂停</string>
    <string name="download_fail">下载失败</string>
    <string name="not_be_device">暂无设备</string>
    <string name="not_be_check_result">暂无检测结果数据</string>
    <string name="cloth_device">验布机设备</string>
    <string name="bad_name">不良名称</string>
    <string name="left">左边</string>
    <string name="top">上边</string>
    <string name="right">右边</string>
    <string name="bottom">底边</string>
    <string name="bad_info_place_parms">不良现象位置信息</string>
    <string name="phone_device">电子产品检验设备</string>
    <string name="x">X轴</string>
    <string name="y">Y轴</string>
    <string name="next">下一条</string>
    <string name="cloth_detail">布匹详情</string>
    <string name="synchronization_success">同步请求已发送</string>
    <string name="card_guoqi">登录信息过期,请重新登录</string>
    <string name="check_number_">检验单号:</string>
    <string name="product_name_">品名:</string>
    <string name="cloth_length_">匹长:</string>
    <string name="order_number">订单号:</string>
    <string name="scan_result">扫描结果</string>
    <string name="no_permission">无权限</string>
    <string name="device_miss_line">设备不在线,无法查看设备信息</string>
    <string name="device_status">设备状态:</string>
    <string name="check_all_meter_">检测总米数:</string>
    <string name="device_all_count">总检测匹数:</string>
    <string name="current_prodcting_info">当日生产信息:</string>
    <string name="mac_address">mac地址:</string>
    <string name="current_check_info">当前布匹检测信息</string>
    <string name="current_checking_cloth_meter_">当前检测米数:</string>
    <string name="current_checking_cloth_bad_count_">当前检测不良数:</string>
    <string name="device_all_check_info">总计检测信息</string>
    <string name="device_all_check_cloth_count_">总检测匹数:</string>
    <string name="device_all_check_cloth_meter_">检测总米数:</string>
    <string name="device_all_check_bad_count_">设备共计检测不良数量:</string>
    <string name="device_online">在线</string>
    <string name="device_upline">离线</string>
    <string name="qr_code_card">公司二维码</string>
    <string name="is_manager">当前用户是管理员,已绑定公司</string>
    <string name="company_info_empty">没有绑定公司</string>
    <string name="bind_success_please_reset_login">绑定成功请重新登陆账号</string>
</resources>
