<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/base_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/origin_password"
            android:textColor="@color/color_292929"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_origin_pw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_100"
            android:background="@null"
            android:hint="@string/please_input_old_password"
            android:textColor="@color/color_242525"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_e4e4e4" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/new_password"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_new_pw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_100"
            android:background="@null"
            android:hint="@string/please_input_new_password"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_e4e4e4" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/confirm_new_password"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_confirm_pw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_100"
            android:background="@null"
            android:hint="@string/please_again_input_new_password"
            android:textColor="@color/color_242525"
            android:textSize="@dimen/sp_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_e4e4e4" />

    </RelativeLayout>


</LinearLayout>
