<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/left_dark_key" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/local_server_manage"
            android:textColor="@color/black" />


        <RelativeLayout
            android:id="@+id/rl_model"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_20"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_90"
            android:background="@drawable/button_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/model"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_13" />

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_5"
            android:src="@mipmap/choose" />

        <RelativeLayout
            android:id="@+id/rl_set"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_20"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@drawable/button_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_13" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_a1a1a1"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/tab_shape">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_border_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/local_server"
                android:textColor="@color/color_242525"
                android:textSize="@dimen/sp_12" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_border_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/current_model_version"
                android:textColor="@color/color_242525"
                android:textSize="@dimen/sp_12" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_border_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/new_model_version"
                android:textColor="@color/color_242525"
                android:textSize="@dimen/sp_12" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@drawable/item_border_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/opreate"
                android:textColor="@color/color_242525"
                android:textSize="@dimen/sp_12" />

        </RelativeLayout>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcy_server_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_list_shape"></android.support.v7.widget.RecyclerView>


</LinearLayout>