<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".devices.view.activity.TerminalDetailActivity">

    <include layout="@layout/base_title"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/device_seq"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:id="@+id/tv_device_seq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="001"
                    android:textColor="@color/color_101010" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/use_config_"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:id="@+id/tv_use_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="iphone"
                    android:textColor="@color/color_101010" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/technology_classify_"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:id="@+id/tv_technology_classify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="半成品检测"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/version_"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="20181219"
                    android:textColor="@color/color_101010" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/current_count_"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:id="@+id/tv_current_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="1500"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/all_count_"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:id="@+id/tv_all_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="100000"
                    android:textColor="@color/color_101010" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/current_bad_count_"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:id="@+id/tv_current_bad_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="10"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/all_bad_count_"
                    android:textColor="@color/color_101010" />

                <TextView
                    android:id="@+id/tv_all_bad_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="500"
                    android:textColor="@color/color_101010" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/config_list"
                android:textColor="@color/contents_text"
                android:textSize="@dimen/sp_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/tab_shape">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_border_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/name"
                        android:textColor="@color/color_242525"
                        android:textSize="@dimen/sp_12" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_border_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/technology_type"
                        android:textColor="@color/color_242525"
                        android:textSize="@dimen/sp_12" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_border_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/version"
                        android:textColor="@color/color_242525"
                        android:textSize="@dimen/sp_12" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:background="@drawable/item_border_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/opreate"
                        android:textColor="@color/color_242525"
                        android:textSize="@dimen/sp_12" />

                </RelativeLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcy_config_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_list_shape"></android.support.v7.widget.RecyclerView>


        </LinearLayout>

    </ScrollView>


</LinearLayout>